[Autofill] Fix autofill_metrics_browsertest flakyness.

Bug: 793578
Change-Id: Ib7959fd9823b661c396256f55a2155a454dbecbf
Reviewed-on: https://chromium-review.googlesource.com/860985
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530518}
Former-commit-id: d446d357d630a91cdc727cf6e99d4eaeda3bf2ac